# rustsat-benchmarks

./: .gitignore  .gitmodules  .latexmkrc  Cargo.toml  LICENSE  README.md  build.rs  enumerator.cpp  flake.nix  justfile
data/: binary-adder.csv  enumerator.csv  gte.csv  totalizer.csv
open-wbo-capi/: Solver.h  open-wbo.cpp  open-wbo.h
open-wbo/encodings/: Enc_Adder.h  Enc_GTE.h  Enc_Totalizer.cc  Enc_Totalizer.h  Encodings.h
open-wbo/solvers/glucose4.1/mtl/: Vec.h
plots/: architecture.tex  binary-adder.tex  enumerator.tex  gte.tex  legend.tex  plots.sty  totalizer.tex
pysrc/: main.py
rustsrc/: cardenc.rs  main.rs  openwbo.rs  pbenc.rs  randomweights.rs
scripts/: card-enc.sh  collect-adder-clauses.sh  collect-gte-clauses.sh  collect-totalizer-clauses.sh  enumerator.sh  pb-enc.sh
