[package]
name = "rustsat-benchmarks"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.9", features = ["derive"] }
rand = "0.9.0"
rand_chacha = "0.9.0"
rustsat = { path = "./rustsat" }
rustsat-cadical = { path = "./rustsat/cadical" }

[profile.profiling]
inherits = "release"
debug = 1

[[bin]]
name = "rustsat-benchmarks"
path = "rustsrc/main.rs"

[build-dependencies]
bindgen = "0.71.1"
cc = { version = "1.2.17", features = ["parallel"] }
